<resources>
    <string name="app_name">Work Hours</string>

    <string name="profile">Your profile</string>
    <string name="pictureuser">Picture of user</string>
    <string name="registration">Registration</string>
    <string name="enterProfile">Enter all fields</string>
    <string name="imageDesc">User profile picture</string>
    <string name="currentuserid">CurrentUserId</string>
    <string name="calendarView">Calendar view</string>

    <array name="position">
        <item>Administrative</item>
        <item>Worker</item>
    </array>


    <!-- ================================ -->
    <!-- Buttons -->
    <!-- ================================ -->
    <string name="signInBtntext">Sign in</string>
    <string name="signOutBtntext">Sign out</string>
    <string name="forgotPassw">Forgot password?</string>
    <string name="regBtn">Register</string>
    <string name="btnClose">Close</string>

    <!-- ================================ -->
    <!-- Workers hours -->
    <!-- ================================ -->
    <string name="worker">Worker:&#160;</string>


    <!-- ================================ -->
    <!-- Placeholders -->
    <!-- ================================ -->
    <string name="enterEmail">Enter email</string>
    <string name="enterPassword">Enter password</string>
    <string name="editName">Edit first and last name</string>
    <string name="enterUserName">Enter user name</string>


    <!-- ================================ -->
    <!-- Calendar -->
    <!-- ================================ -->
    <string name="Calendar">Calendar</string>
    <string name="save">Save</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="currentDate">CurrentDate</string>
    <string name="numberOfWorkingHours">Working hours</string>
    <string name="totalOfWorkingHours">Total working hours:</string>
    <string name="workDurationEmpty">Work duration can\'t be empty</string>
    <string name="workHoursSaved">Work hours saved</string>


    <!-- ================================ -->
    <!-- General -->
    <!-- ================================ -->
    <string name="zero">0</string>
    <string name="insertData">Insert data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="content">content</string>


    <!-- ================================ -->
    <!-- validator -->
    <!-- ================================ -->

    <!-- errors -->
    <string name="loginOrPasswordEmpty">Login or password is empty</string>
    <string name="incorrectUsernameOrPassword">Incorrect username or password!</string>
    <string name="registrationError">Registration error</string>
    <string name="filledField">Field needs to be filled!</string>
    <string name="validEmail">You need to enter a valid email</string>
    <string name="emailSendingError">Error sending email</string>
    <string name="authenticationFailed">"Authentication failed."</string>
    <string name="imageOrNameIsEmpty">Image or name is empty</string>
    <string name="passwordNumberSymbols">Password must be at least 6 symbols.</string>
    <string name="userAlreadyExists">Such User already exists!</string>
    <string name="fillAllFields">You didn\'t fill in all the fields.</string>


    <!-- notifications -->
    <string name="loginSuccessful">Login successful, please fill all fields</string>
    <string name="registrationOffer">Don\'t have account yet. Would you like register?</string>
    <string name="emailSent">Email was sent to the address you provided.</string>
    <string name="successfullySignedIn">Successfully signed in with: </string>
    <string name="successfullySignedOut">Successfully signed out.</string>
    <string name="signingOut">Signing out…</string>
    <string name="attention">Attention!</string>
    <string name="authenticationSuccess">"Authentication success. "</string>
    <string name="dataInserted">Data inserted!</string>


    <!-- ================================ -->
    <!-- DB -->
    <!-- ================================ -->
    <string name="tableUsers">Users</string>
    <string name="tableWorkingHours">WorkingHoursList</string>

    <string name="imageUrl">imageurl</string>
    <string name="email">email</string>

    <string name="imageFolder">image/*</string>
    <string name="worker_hours">Workers hours</string>

</resources>